@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>com.sshtools</groupId>
 		<artifactId>maverick-synergy-group</artifactId>
-		<version>3.0.0-RC6-SNAPSHOT</version>
+		<version>3.0.0-RC7-SNAPSHOT</version>
 	</parent>
 	<packaging>jar</packaging>
 	<artifactId>maverick-virtual-session</artifactId>
